--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             <a href="#projects" class="btn" data-aos="fade-up" data-aos-delay="400">See My Work</a>
           </div>
           <div class="hero-image" data-aos="fade-left" data-aos-delay="100">
-            <img src="https://via.placeholder.com/550x450/4A5568/FFFFFF?text=Designer+Illustration+V2" alt="Designer at work illustration">
+            <img src="https://placehold.co/550x450/4A5568/FFFFFF.png?text=Designer+Illustration+V2" alt="Designer at work illustration">
           </div>
         </div>
       </div>
@@ -549,7 +549,7 @@
             </p>
           </div>
           <div class="about-image" data-aos="fade-left" data-aos-delay="200">
-            <img src="https://via.placeholder.com/400x480/4A5568/FFFFFF?text=Begench+Photo+V2" alt="Begench, UI/UX and Motion Designer">
+            <img src="https://placehold.co/400x480/4A5568/FFFFFF.png?text=Begench+Photo+V2" alt="Begench, UI/UX and Motion Designer">
           </div>
         </div>
       </div>
@@ -601,7 +601,7 @@
             <div class="grid grid-cols-3">
                 <!-- Project 1 -->
                 <div class="project-card" data-aos="fade-up" data-aos-delay="100">
-                    <img src="https://via.placeholder.com/400x250/6366F1/FFFFFF?text=Project+Alpha" alt="Project Alpha Screenshot">
+                    <img src="https://placehold.co/400x250/6366F1/FFFFFF.png?text=Project+Alpha" alt="Project Alpha Screenshot">
                     <div class="project-info">
                         <h4>Project Alpha</h4>
                         <p>A cutting-edge web application for task management, focusing on seamless collaboration.</p>
@@ -610,7 +610,7 @@
                 </div>
                 <!-- Project 2 -->
                 <div class="project-card" data-aos="fade-up" data-aos-delay="200">
-                    <img src="https://via.placeholder.com/400x250/10B981/FFFFFF?text=Project+Beta" alt="Project Beta Screenshot">
+                    <img src="https://placehold.co/400x250/10B981/FFFFFF.png?text=Project+Beta" alt="Project Beta Screenshot">
                     <div class="project-info">
                         <h4>Project Beta</h4>
                         <p>Mobile app design for a fitness tracker, emphasizing user motivation and data visualization.</p>
@@ -619,7 +619,7 @@
                 </div>
                 <!-- Project 3 -->
                 <div class="project-card" data-aos="fade-up" data-aos-delay="300">
-                    <img src="https://via.placeholder.com/400x250/F59E0B/FFFFFF?text=Project+Gamma" alt="Project Gamma Screenshot">
+                    <img src="https://placehold.co/400x250/F59E0B/FFFFFF.png?text=Project+Gamma" alt="Project Gamma Screenshot">
                     <div class="project-info">
                         <h4>Project Gamma</h4>
                         <p>E-commerce platform redesign that resulted in a 20% increase in conversion rates.</p>
@@ -640,32 +640,32 @@
         <h2 class="text-center mb-12" data-aos="fade-up">Core Skills</h2>
         <div class="skills-grid">
           <div class="skill-item" data-aos="zoom-in" data-aos-delay="0">
-            <img src="https://via.placeholder.com/80x80/4A5568/FFFFFF?text=PS" alt="Photoshop Icon">
+            <img src="https://placehold.co/80x80/4A5568/FFFFFF.png?text=PS" alt="Photoshop Icon">
             <p>Adobe Photoshop</p>
             <div class="stars">★★★★★</div>
           </div>
           <div class="skill-item" data-aos="zoom-in" data-aos-delay="100">
-            <img src="https://via.placeholder.com/80x80/4A5568/FFFFFF?text=AI" alt="Illustrator Icon">
+            <img src="https://placehold.co/80x80/4A5568/FFFFFF.png?text=AI" alt="Illustrator Icon">
             <p>Adobe Illustrator</p>
             <div class="stars">★★★★★</div>
           </div>
           <div class="skill-item" data-aos="zoom-in" data-aos-delay="200">
-            <img src="https://via.placeholder.com/80x80/4A5568/FFFFFF?text=AE" alt="After Effects Icon">
+            <img src="https://placehold.co/80x80/4A5568/FFFFFF.png?text=AE" alt="After Effects Icon">
             <p>Adobe After Effects</p>
             <div class="stars">★★★★★</div>
           </div>
           <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
-            <img src="https://via.placeholder.com/80x80/4A5568/FFFFFF?text=FIG" alt="Figma Icon">
+            <img src="https://placehold.co/80x80/4A5568/FFFFFF.png?text=FIG" alt="Figma Icon">
             <p>Figma</p>
             <div class="stars">★★★★★</div>
           </div>
           <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
-            <img src="https://via.placeholder.com/80x80/4A5568/FFFFFF?text=BL" alt="Blender Icon">
+            <img src="https://placehold.co/80x80/4A5568/FFFFFF.png?text=BL" alt="Blender Icon">
             <p>Blender</p>
             <div class="stars">★★★★★</div>
           </div>
           <div class="skill-item" data-aos="zoom-in" data-aos-delay="500">
-            <img src="https://via.placeholder.com/80x80/4A5568/FFFFFF?text=UX" alt="UX Research Icon">
+            <img src="https://placehold.co/80x80/4A5568/FFFFFF.png?text=UX" alt="UX Research Icon">
             <p>UX Research</p>
             <div class="stars">★★★★☆</div>
           </div>
