--- a/index.html
+++ b/index.html
@@ -882,6 +882,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#projects">Work</a></li>
           <li><a href="#skills">Skills</a></li>
+          <li><a href="blogs.html">Blog</a></li>
           <li><a href="#contact" class="btn btn-secondary">Contact Me</a></li>
         </ul>
         <button class="menu-toggle" aria-label="Open menu" aria-expanded="false">
